[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/BlueEnemy(Ranged).gd" type="Script" id=1]
[ext_resource path="res://Audio/Absorb.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/laser3.ogg" type="AudioStream" id=3]
[ext_resource path="res://Characters/Enemies/Blue Enemy/Walk 1.png" type="Texture" id=4]
[ext_resource path="res://Characters/Enemies/Blue Enemy/Walk 2.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.71563, 15.3896 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.46031, 14.5729 )

[node name="BlueEnemy(Ranged)" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Absorb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="BlastSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Low Volume"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.05293, 0.566965 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1.05293, 0.566965 )
shape = SubResource( 3 )

[node name="FireballCooldown" type="Timer" parent="."]

[node name="Position" type="Position2D" parent="."]
position = Vector2( -18, 0 )
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="FireballCooldown" to="." method="_on_FireballCooldown_timeout"]
